@@ -617,31 +617,34 @@ class WC_Stripe_Customer {
 		// Options based on Stripe locales.
 		// https://support.stripe.com/questions/language-options-for-customer-emails
 		$stripe_locales = [
-			'ar'    => 'ar-AR',
-			'da_DK' => 'da-DK',
-			'de_DE' => 'de-DE',
-			'en'    => 'en-US',
-			'es_ES' => 'es-ES',
-			'es_CL' => 'es-419',
-			'es_AR' => 'es-419',
-			'es_CO' => 'es-419',
-			'es_PE' => 'es-419',
-			'es_UY' => 'es-419',
-			'es_PR' => 'es-419',
-			'es_GT' => 'es-419',
-			'es_EC' => 'es-419',
-			'es_MX' => 'es-419',
-			'es_VE' => 'es-419',
-			'es_CR' => 'es-419',
-			'fi'    => 'fi-FI',
-			'fr_FR' => 'fr-FR',
-			'he_IL' => 'he-IL',
-			'it_IT' => 'it-IT',
-			'ja'    => 'ja-JP',
-			'nl_NL' => 'nl-NL',
-			'nn_NO' => 'no-NO',
-			'pt_BR' => 'pt-BR',
-			'sv_SE' => 'sv-SE',
+			'ar'             => 'ar-AR',
+			'da_DK'          => 'da-DK',
+			'de_CH'          => 'de-DE',
+			'de_CH_informal' => 'de-DE',
+			'de_DE'          => 'de-DE',
+			'de_DE_formal'   => 'de-DE',
+			'en'             => 'en-US',
+			'es_ES'          => 'es-ES',
+			'es_CL'          => 'es-419',
+			'es_AR'          => 'es-419',
+			'es_CO'          => 'es-419',
+			'es_PE'          => 'es-419',
+			'es_UY'          => 'es-419',
+			'es_PR'          => 'es-419',
+			'es_GT'          => 'es-419',
+			'es_EC'          => 'es-419',
+			'es_MX'          => 'es-419',
+			'es_VE'          => 'es-419',
+			'es_CR'          => 'es-419',
+			'fi'             => 'fi-FI',
+			'fr_FR'          => 'fr-FR',
+			'he_IL'          => 'he-IL',
+			'it_IT'          => 'it-IT',
+			'ja'             => 'ja-JP',
+			'nl_NL'          => 'nl-NL',
+			'nn_NO'          => 'no-NO',
+			'pt_BR'          => 'pt-BR',
+			'sv_SE'          => 'sv-SE',
 		];
 
 		$preferred = isset( $stripe_locales[ $locale ] ) ? $stripe_locales[ $locale ] : 'en-US';
